--- a/app.json
+++ b/app.json
@@ -2,10 +2,10 @@
   "expo": {
     "name": "REV Delivery",
     "slug": "shopify-react-native-template",
-    "version": "1.0.12",
+    "version": "1.1.1",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
-    "userInterfaceStyle": "automatic",
+    "userInterfaceStyle": "light",
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
@@ -17,7 +17,14 @@
     "ios": {
       "supportsTablet": false,
       "bundleIdentifier": "com.sfkunal.shopifyreactnativetemplate",
-      "buildNumber": "29"
+      "buildNumber": "43",
+      "infoPlist": {
+        "NSCameraUsageDescription": "This app uses the camera to enable users to scan their credit card for quicker entry",
+        "NSApplePayUsageDescription": "This app integrates Apple Pay for quicker checkout",
+        "NSAppTransportSecurity": {
+          "NSAllowsArbitraryLoads": true
+        }
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -39,6 +46,13 @@
             "deploymentTarget": "17.0"
           }
         }
+      ],
+      [
+        "@stripe/stripe-react-native",
+        {
+          "merchantIdentifier": "merchant.mobile.rev",
+          "enableGooglePay": true
+        }
       ]
     ],
     "extra": {
@@ -48,6 +62,7 @@
     },
     "runtimeVersion": {
       "policy": "sdkVersion"
-    }
+    },
+    "scheme": "revdelivery"
   }
 }
