--- a/package.json
+++ b/package.json
@@ -10,63 +10,65 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@expo/config-plugins": "7.2.2",
-    "@expo/prebuild-config": "6.2.4",
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/config-plugins": "~8.0.0",
+    "@expo/prebuild-config": "~7.0.0",
+    "@expo/vector-icons": "^14.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@gorhom/bottom-sheet": "^4",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/netinfo": "9.3.10",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "6.1.2",
     "@react-navigation/native-stack": "6.9.8",
     "@shopify/ui-extensions-react": "^2024.1.1",
+    "@stripe/stripe-react-native": "0.37.2",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
     "@types/react": "~18.2.14",
     "add": "^2.0.6",
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "chalk": "^5.3.0",
     "eas-cli": "3.9.1",
-    "expo": "^49.0.23",
-    "expo-application": "~5.3.0",
-    "expo-build-properties": "~0.8.3",
-    "expo-constants": "~14.4.2",
-    "expo-device": "~5.4.0",
-    "expo-font": "~11.4.0",
-    "expo-linear-gradient": "~12.3.0",
-    "expo-notifications": "~0.20.1",
-    "expo-secure-store": "~12.3.1",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
-    "expo-web-browser": "~12.3.2",
+    "expo": "^51.0.14",
+    "expo-application": "~5.9.1",
+    "expo-build-properties": "~0.12.3",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-font": "~12.0.7",
+    "expo-linear-gradient": "~13.0.2",
+    "expo-notifications": "~0.28.9",
+    "expo-secure-store": "~13.0.1",
+    "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.17",
+    "expo-web-browser": "~13.0.3",
+    "firebase-admin": "^12.1.1",
+    "firebase-functions": "^5.0.1",
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.2",
     "react-native-country-codes-picker": "^2.3.5",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-google-places-autocomplete": "^2.5.6",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.6",
+    "shipday": "^1.1.0",
+    "stripe": "^15.11.0",
     "twilio": "^5.0.3",
-    "typescript": "^5.1.3",
+    "typescript": "~5.3.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/stripe": "^8.0.417",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "react-native-dotenv": "^3.4.11"
-  },
-  "overrides": {
-    "@expo/config-plugins": "7.2.2",
-    "@expo/prebuild-config": "6.2.4",
-    "expo-modules-autolinking": "~1.5.0"
   },
   "private": true
 }
