--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
-    "@expo/config-plugins": "~8.0.0",
-    "@expo/prebuild-config": "~7.0.0",
     "@expo/vector-icons": "^14.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@gorhom/bottom-sheet": "^4",
@@ -29,7 +27,7 @@
     "axios": "^1.6.8",
     "base-64": "^1.0.0",
     "chalk": "^5.3.0",
-    "eas-cli": "3.9.1",
+    "eas-cli": "^10.0.2",
     "expo": "^51.0.14",
     "expo-application": "~5.9.1",
     "expo-build-properties": "~0.12.3",
